--- a/style.css
+++ b/style.css
@@ -2,20 +2,26 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(41, 41, 41);
+    background-color: rgb(0, 0, 0);
 }
 
 .container {
     margin: 100px;
     display: flex;
     flex-direction: column;
-    background-color: black;
-    border: 8px solid grey;
+    background-color: rgb(0, 0, 0);
+    border: 6px solid grey;
     flex-shrink: 0;
+    color: black;
+    border-radius: 6px;
 }
 
 .container .lastRow .number {
     width: 115px;
+}
+
+.container > * {
+    margin: 5px;
 }
 
 button {
@@ -26,6 +32,7 @@ button {
     line-height: 43px;
     text-align: center;
     font-weight: 600;
+    border-radius: 6px;
 }
 
 .display {
@@ -36,6 +43,7 @@ button {
     text-align: end;
     color: white;
     font-weight: 600;
+    border-radius: 6px;
 }
 
 .container .operator {
